Kubernetes/NetworkPolicy/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cldr: 8.8.8.8/32
      ports:
        - protocol: UDP
          port: 53
