Kubernetes/NetworkPolicy/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web
    policyTypes:
      - Ingress
    ingress:
      - from:
          - podSelector:
              matchLabels:
                role: frontend
